Codestyle refactoring